--- a/src/styles.css
+++ b/src/styles.css
@@ -72,11 +72,14 @@ img {
 }
 
 .SearchForm-button {
-  display: inline-block;
-  width: 48px;
-  height: 48px;
+  display: block;
+  margin: 0 auto;
+  padding: 5px 10px;
+  margin-bottom: 10px;
+  /* width: 48px;
+  height: 48px; */
   border: 0;
-  background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');
+  /* background-image: url('http: //www.w3.org/2000/svg'); */
   background-size: 40%;
   background-repeat: no-repeat;
   background-position: center;
@@ -90,7 +93,7 @@ img {
   opacity: 1;
 }
 
-.SearchForm-button-label {
+/* .SearchForm-button-label {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -100,7 +103,7 @@ img {
   white-space: nowrap;
   clip-path: inset(50%);
   border: 0;
-}
+} */
 
 .SearchForm-input {
   display: inline-block;
@@ -182,11 +185,12 @@ img {
 */
 .Button {
   padding: 8px 16px;
+  margin: 0 auto;
   border-radius: 2px;
   background-color: #3f51b5;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
-  display: inline-block;
+  display: block;
   color: #fff;
   border: 0;
   text-decoration: none;
@@ -204,4 +208,9 @@ img {
 .Button:hover,
 .Button:focus {
   background-color: #303f9f;
+}
+
+.Loader-style {
+  display: flex;
+  justify-content: center;
 }
